@@ -6,6 +6,6 @@ tiergen-ignored-recipes=Ignored recipes
 tiergen-debug-log=Print startup debug
 
 [mod-setting-description]
-tiergen-item-calculation=A comma separated list of item id's that'll be calculated for the tiers. Will recursively calculate the tier of resources used to create that item.
-tiergen-base-items=A comma separated list of item id's that'll have their tiers set to 0. Will prevent any calculation from recursing past it.
+tiergen-item-calculation=A comma separated list of item id's that'll be calculated for the tiers. Will recursively calculate the tier of resources used to create that item. If there is no recipe to make the item, it's considered t0 or a Base Item.
+tiergen-base-items=A comma separated list of item id's that'll have their tiers set to 0. Default is raw-fish as you can obtain it from launching space-science into space.
 tiergen-ignored-recipes=A comma separated list of recipe id's that'll be ignored when calculating item tiers. Meant to prevent early or cheap recipes from lowering an item's tier.
