@@ -3,6 +3,7 @@ Version: 0.1.3
 Date: ????
   Features:
     - Burnable fuels now kind of work. Not all machines that can burn are currently being grabbed. To be refined
+    - Rocket launch products now work. This means you can calculate space-science-pack instead of cobbling together its ingredients
   Bugfixes:
     - Now will no longer crash on recipes with no results
     - A category with no machines are handled instead of catching the thrown error
